--- a/templates/invoice/general_3.html
+++ b/templates/invoice/general_3.html
@@ -108,7 +108,7 @@
                                                 Total </td>
                                             <td
                                                 class="tm_width_3 tm_border_top_0 tm_bold tm_f16 tm_white_color tm_text_right">
-                                                ${{invoice.get_total}}</td>
+                                                &#8377;{{invoice.get_total}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -130,9 +130,7 @@
                     <div class="tm_note tm_text_center tm_font_style_normal">
                         <hr class="tm_mb15">
                         <p class="tm_mb2"><b class="tm_primary_color">Terms & Conditions:</b></p>
-                        <p class="tm_m0">All claims relating to quantity or shipping errors shall be waived by Buyer
-                            unless made in writing to <br>Seller within thirty (30) days after delivery of goods to the
-                            address stated.</p>
+                        <p class="tm_m0">Please note :- You are responsible to safe the bill from lost and misuse by others</p>
                     </div><!-- .tm_note -->
                 </div>
             </div>
