--- a/templates/web/invoice-searching.html
+++ b/templates/web/invoice-searching.html
@@ -142,10 +142,7 @@
                         <div class="tm_note tm_text_center tm_font_style_normal">
                             <hr class="tm_mb15">
                             <p class="tm_mb2"><b class="tm_primary_color">Terms & Conditions:</b></p>
-                            <p class="tm_m0">All claims relating to quantity or shipping errors shall be waived by Buyer
-                                unless made in writing to <br>Seller within thirty (30) days after delivery of goods to
-                                the
-                                address stated.</p>
+                            <p class="tm_m0">Please note :- You are responsible to safe the bill from lost and misuse by others</p>
                         </div><!-- .tm_note -->
                     </div>
                 </div>
@@ -183,5 +180,10 @@
     </div>
 </div>
 
+
+<script src="{% static 'invoice/js/jquery.min.js' %}"></script>
+<script src="{% static 'invoice/js/jspdf.min.js' %}"></script>
+<script src="{% static 'invoice/js/html2canvas.min.js' %}"></script>
+<script src="{% static 'invoice/js/main.js' %}"></script>
 
 {% endblock %}
