--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -177,9 +177,7 @@
                             {% csrf_token %}
                             <div class="col-lg-2 col-md-3 col-sm-4 col-4 tooltip">
                                 <span class="tooltiptext">To download a poster with branding of your organization,
-                                    upload an image size of (222 PX * 1080 PX ) <br>
-                                    നിങ്ങളുചട സ്ഥാപനത്തിന്ചറ ത് ാൻേിംഗ് ഉള്ള ഒരു ഡപാസ്റ്റർ േൗൺഡലാഡ് ചെയ്യാൻ,
-                                    (222 PX * 1080 PX ) സസസ് ഒരു ഇഡേജ് അപ്ഡലാഡ് ചെയ്യുക
+                                    upload an image size of (222 PX * 1080 PX )
                                 </span>
                                 <label class="label-file">{{branding_image_form.image}} Upload Image</label>
 
