--- a/templates/invoice/invoice_form.html
+++ b/templates/invoice/invoice_form.html
@@ -33,6 +33,7 @@
     <hr>
     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
         <form action="" method="post">{% csrf_token %}
+            
             {{ form|crispy }}
 
 
@@ -84,17 +85,9 @@
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script>
-        $("#single").select2({
-            placeholder:"Customer",
-            allowClear:true
-        }) 
-    </script>
-    
-
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    
     <script src="{% static 'formset/jquery.formset.js' %}"></script>
     <script type="text/javascript">
         $('.formset_row').formset({
@@ -108,4 +101,16 @@
     <script src="{% static 'invoice/js/jspdf.min.js' %}"></script>
     <script src="{% static 'invoice/js/html2canvas.min.js' %}"></script>
     <script src="{% static 'invoice/js/main.js' %}"></script>
+
+
+    
+{% endblock %}
+
+{% block js %}
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>   
+    <script>
+        $(document).ready(function() {
+            $('select').select2();
+        });
+    </script> 
 {% endblock %}
