--- a/templates/web/buy-now.html
+++ b/templates/web/buy-now.html
@@ -6,8 +6,7 @@
     <div class="content-wrapper" id="demo2">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                <p>Contact our help for editing including your company logo address in this size (222PX*1080PX) will incur a charge of Rs.99 <br>
-                    ഈ അളവിൽ നിങ്ങളുചട കമ്പനി ഡലാഡ ാ വിലാസം ഉൾചെചട എേിറ്റ്  ചെയ്യുെതിന് ഞങ്ങളുചട സൊയതിെു ന്ധചെടുക. 99 രൂപ ൊർജ് ഉണ്ടായിരിക്കും</p>
+                <p>Contact our help for editing including your company logo address in this size (222PX*1080PX) will incur a charge of Rs.99</p>
                     <div class="row">
                         <div class="col-lg-12 col-12 text-center mt-5">
                             <a href="https://wa.me/917306502050?text=Hi%2C%0AUSK%20LOGIN%20Brand%20image%20design%20details" target="_blank" rel="noopener noreferrer" class="WHATS-APP-NOW">WHATS APP NOW</a>
