--- a/templates/web/certificate-pdf.html
+++ b/templates/web/certificate-pdf.html
@@ -2665,7 +2665,7 @@ zVdnAAAAAElFTkSuQmCC" transform="matrix(0.2318 0 0 0.2318 106.8327 42.24)">
 			<text transform="matrix(1 0 0 1 51.6211 475.9691)" class="st1 st2 st5">Shop Name : </text>
 			<text transform="matrix(1 0 0 1 142.3111 475.9691)" class="st1 st2 st4">{{shop_name}}</text>
 			<text transform="matrix(1 0 0 1 84.4811 499.9691)" class="st1 st2 st5">District : </text>
-			<text transform="matrix(1 0 0 1 142.3111 499.9691)" class="st1 st2 st4"> {{district}}</text>
+			<text transform="matrix(1 0 0 1 142.3111 499.9691)" class="st1 st2 st4">&nbsp; {{district}}</text>
 			<text transform="matrix(1 0 0 1 76.6811 523.9691)" class="st1 st2 st5">Pincode : </text>
 			<text transform="matrix(1 0 0 1 142.3111 523.9691)" class="st1 st2 st4">{{pincode}}</text>
 		</g>
@@ -2675,7 +2675,7 @@ zVdnAAAAAElFTkSuQmCC" transform="matrix(0.2318 0 0 0.2318 106.8327 42.24)">
 		</g>
 		<g id="Is_an_Authorized_Agent_of_USK_Login.com_00000151546108238281159190000006580789576226693053_">
 			<text transform="matrix(1 0 0 1 271.4209 402.2895)" class="st1 st2 st8">Is an Authorized Agent of </text>
-			<text transform="matrix(1 0 0 1 462.8009 402.2895)" class="st9 st2 st8">  usklogin.com</text>
+			<text transform="matrix(1 0 0 1 462.8009 402.2895)" class="st9 st2 st8"> &nbsp; usklogin.com</text>
 		</g>
 		<g id="Layer_4_xA0_Image_00000032607570105288609320000016335623066017049236_">
 
