--- a/templates/web/add-on-services.html
+++ b/templates/web/add-on-services.html
@@ -13,6 +13,7 @@
                             <img src="{{addon_services.image.url}}" alt="">
                         </div>
                         <div class="head-name">
+                            <h5 style="color:#000 ;">{{addon_services.title}}</h5>
                             <h6 style="color:#000 ;">{{addon_services.name}}</h6>
                         </div>
                     </div>
