--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
   <link rel="stylesheet" href="{% static 'web/css/style.css' %}?v=1.0">
   <link rel="stylesheet" href="{% static 'web/css/custom.css' %}?v=1.0">
+  {% block css %}{% endblock %}
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
