--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -52,7 +52,7 @@
       </li>
 
       <li class="nav-item dropdown">
-        <a class="nav-link count-indicator dropdown-toggle" href="{% url 'web:notes' %}">
+        <a class="nav-link count-indicator dropdown-toggle" href="{% url 'accounts:note_list' %}">
           <i class="mdi mdi-note-plus"></i>
         </a>
 
