--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -2,33 +2,13 @@
 {% load static humanize %}
 {% block content %}
 
-
-
-
 <div class="main-panel " id="demo">
 
   <div class="content-wrapper" id="demo2">
-    <section>
-      <div class="row">
 
-        {% for each_service_head in service_head %}
-        <div class="col-lg-2 col-md-2 col-sm-6 col-6 pb-1 ">
-          <div class="service-main-head-index text-center bg-gradient-danger">
-            <a href="{% url 'services:service' each_service_head.slug %}"
-              class="serviec-main-head-a">{{each_service_head.title}}</a>
-          </div>
-        </div>
-        {% endfor %}
-
-      </div>
-
-    </section>
-
-    <!--news scrolling  -->
-    <section class="pt-2">
+    <section class="pt-0">
       <div class="alert alert-info">
         <span class="text1">
-
           <marquee>{{latest_news.news}}
             {% if not latest_news.link %}
             <span></span>
@@ -42,6 +22,80 @@
     </section>
 
 
+    <section class="pt-4">
+      <div class="row">
+        {% for each_service_head in service_head %}
+        <div class="col-lg-2 col-md-2 col-sm-6 col-6 pb-1 ">
+          <div class="service-main-head-index text-center bg-gradient-danger">
+            <a href="{% url 'services:service' each_service_head.slug %}"
+              class="serviec-main-head-a">{{each_service_head.title}}</a>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </section>
+
+    <section class="pt-4">
+      <div class="row">
+
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+          <h6 class="pb-2 service-heading">NEWLY ADDED SERVICES</h6>
+
+          <div class="row">
+
+            {% for obj in new_service_poster %}
+            <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+              <div class="card card-body w-100">
+                <img src="{{obj.image.url}}" data-id="new_service_poster-{{obj.id | apnumber }}" alt="Image">
+                <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
+                <p class="my-1">{{obj.title}}</p>
+                <div class="text-center">
+                  <button class="btn-sm btn btn-primary generate" target="_blank"
+                    data-source="new_service_poster-{{obj.id | apnumber }}">Download</button>
+                  <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer"
+                    target="_blank">Details</a>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+            <div class="col-lg-12 col-12 mt-3">
+              <a href="{% url 'web:newly_added_services' %}" class="poster-view-more d-inline-block">
+                View More
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
+          <h6 class="pb-2 service-heading">IMPORTANT</h6>
+          <div class="row">
+            {% for obj in important_poster %}
+            <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+              <div class="card card-body w-100">
+                <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
+                <img src="{{branding_image.image.url}}" alt="" />
+
+                <p class="my-1">{{obj.title}}</p>
+                <div class="text-center">
+                  <button class="btn-sm btn btn-primary generate" target="_blank"
+                    data-source="important-poster-{{obj.id | apnumber }}">Download</button>
+                  <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer"
+                    target="_blank">Details</a>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+            <div class="col-lg-12 col-12 mt-3">
+              <a href="{% url 'web:important_services' %}" class="poster-view-more d-inline-block">
+                View More
+              </a>
+            </div>
+          </div>
+        </div>
+
+    </section>
+
+
     <div class="d-none">
       <div class="service-heading">
         <h5>Branding Image</h5>
@@ -49,77 +103,15 @@
       <div class="container">
         {% if branding_image.image %}
         <img src="{{branding_image.image.crop.1000x100}}" id="footerImage" alt="Image">
-        {% else %}
-        <h4>....</h4>
         {% endif %}
       </div>
     </div>
 
 
-
-    <section>
-      <div class="row">
-        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-          <h6 class="pb-2 service-heading">NEWLY ADDED SERVICES</h6>
-
-          <div class="container">
-            <div class="row">
-
-              {% for obj in new_service_poster %}
-              <div class="col-lg-6 col-md-6 col-sm-6 col-6">
-                <div class="card card-body w-100">
-                  <img src="{{obj.image.url}}" data-id="new_service_poster-{{obj.id | apnumber }}" alt="Image">
-                  <img src="{{branding_image.image.url}}" alt="" class="branding_image" />
-                  <p class="my-1">{{obj.title}}</p>
-                  <div class="text-center">
-                    <button class="btn-sm btn btn-primary generate" target="_blank"
-                      data-source="new_service_poster-{{obj.id | apnumber }}">Download</button>
-                    <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
-                  </div>
-                </div>
-              </div>
-              {% endfor %}
-              <div class="col-lg-12 col-12 mt-3">
-                <a href="{% url 'web:newly_added_services' %}" class="poster-view-more d-inline-block">
-                  View More
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-12 col-sm-12 col-12">
-          <h6 class="pb-2 service-heading">IMPORTANT</h6>
-          <div class="container">
-            <div class="row">
-              {% for obj in important_poster %}
-              <div class="col-lg-6 col-md-6 col-sm-6 col-6">
-                <div class="card card-body w-100">
-                  <img src="{{obj.image.url}}" data-id="important-poster-{{obj.id | apnumber }}" alt="Image">
-                  <img src="{{branding_image.image.url}}" alt="" />
-
-                  <p class="my-1">{{obj.title}}</p>
-                  <div class="text-center">
-                    <button class="btn-sm btn btn-primary generate" target="_blank"
-                      data-source="important-poster-{{obj.id | apnumber }}">Download</button>
-                    <a href="{{obj.detail_link}}" class="btn btn-info btn-sm" rel="noopener noreferrer" target="_blank">Details</a>
-                  </div>
-                </div>
-              </div>
-              {% endfor %}
-              <div class="col-lg-12 col-12 mt-3">
-                <a href="{% url 'web:important_services' %}" class="poster-view-more d-inline-block">
-                  View More
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-    </section>
-
     {% include 'web/partials/popup.html' %}
     {% include 'web/partials/poster.html' %}
+
   </div>
-  <!-- content-wrapper ends -->
 </div>
 
 {% endblock %}
