--- a/static/web/css/custom.css
+++ b/static/web/css/custom.css
@@ -254,3 +254,34 @@ canvas {
     height: 100%;
     object-fit: contain;
 }
+.form-control {
+    border-radius: 6px;
+}
+.select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border: none;
+    border-radius: 6px;
+}
+.select2-container .select2-selection--single {
+    box-sizing: border-box;
+    cursor: pointer;
+    display: block;
+    height: 2.875rem;
+    user-select: none;
+    -webkit-user-select: none;
+    border: none;
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    color: #444;
+    line-height: 2.875rem;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 2.875rem;
+    position: absolute;
+    top: 1px;
+    right: 1px;
+    width: 20px;
+}
+.select2-container {
+    min-width: 100%;
+}
