--- a/templates/invoice/customer_form.html
+++ b/templates/invoice/customer_form.html
@@ -1,107 +1,49 @@
-{% extends "invoice/base.html" %}
-{% load static %}
-{%load crispy_forms_tags %} 
+{% extends "web/base.html" %}
+{% load static crispy_forms_tags %}
 
-<link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
-<title>USKLOGIN.COM</title>
-{% block title %}{% endblock %}
+{% block header %}{% endblock %}
+{% block sidebar %}{% endblock %}
+
+
 {% block content %}
+<div class="main-panel ml-0 mx-auto" id="demo">
+    <div class="content-wrapper" id="demo2">
+        <section>
+            <div class="row">
+                <div class="col-12 mb-3">
+                    <h3>Profile</h3>
+                </div>
 
-<style>
- .save-button{
-  border-radius: 10px;
-  border: 1px solid #11831f;
-  padding: 3px 17px;
-  background-color: #11831f;
-  color: #fff;
-  font-weight: 400;
-}
-.back{
-    color: #000;
-    text-decoration: none;
-    margin-right: 14px;
-}
-</style>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                    <form action="" method="post">{% csrf_token %}
 
+                        <div class="row">
+                            <div class="col-md-6">
+                                {{form.name|as_crispy_field}}
+                            </div>
+                            <div class="col-md-6">
+                                {{form.email|as_crispy_field}}
+                            </div>
+                            <div class="col-md-6">
+                                {{form.phone_no|as_crispy_field}}
+                            </div>
+                            <div class="col-md-6">
+                                {{form.address|as_crispy_field}}
+                            </div>
+                        </div>
+                        
+                        <div class="actions mt-3">
+                            <a href="{% url 'invoices:invoice-list' %}" class="back border btn">
+                                <i class="fa-solid fa-arrow-left-long"></i>
+                                <span style="color: #000;">Back</span>
+                            </a>
+                            <input type="submit" value="Save" class="save-button" />
+                        </div>
 
-
-<h2>Profile</h2>
-<hr>
-<div class="col-lg-12 col-md-12 col-sm-12 col-12">
-        <form action="" method="post">{% csrf_token %}
-            {{ form|crispy }}
-
-            <table class="table">
-                {{ invoices.management_form }}
-
-                {% for form in invoices.forms %}
-                    {% if forloop.first %}
-                        <thead>
-                        <tr>
-                            {% for field in form.visible_fields %}
-                                <th>{{ field.label|capfirst }}</th>
-                            {% endfor %}
-                        </tr>
-                        </thead>
-                    {% endif %}
-                    <tr class="{% cycle row1 row2 %} formset_row">
-                        {% for field in form.visible_fields %}
-                            <td>
-                                {# Include the hidden fields in the form #}
-                                {% if forloop.first %}
-                                    {% for hidden in form.hidden_fields %}
-                                        {{ hidden }}
-                                    {% endfor %}
-                                {% endif %}
-                                {{ field.errors.as_ul }}
-                                {{ field }}
-                            </td>
-                        {% endfor %}
-                    </tr>
-                {% endfor %}
-            </table>
-            <a href="{% url 'invoices:customer-list' %}" class="back"><i class="fa-solid fa-arrow-left-long"></i> <span style="color: #000;">Back</span> </a><input type="submit" value="Save" class="save-button"/> 
-        </form>
+                    </form>
+                </div>
+            </div>
+        </section>
     </div>
-
-{% comment %}
-<form>
-    <div class="row">
-        <div class="mb-3 col-lg-12 col-md-12 col-sm-12 col-12">
-            <label class="form-label">Name</label>
-            <input type="text" class="form-control">
-        </div>
-        <div class="mb-3 col-lg-12 col-md-12 col-sm-12 col-12">
-            <label class="form-label">Phone</label>
-            <input type="text" class="form-control">
-        </div>
-        <div class="mb-3 col-lg-12 col-md-12 col-sm-12 col-12">
-            <label class="form-label">Email</label>
-            <input type="text" class="form-control">
-        </div>
-        <div class="mb-3 col-lg-12 col-md-12 col-sm-12 col-12">
-            <label class="form-label">Address</label>
-            <textarea cols="2" rows="10" class="form-control"></textarea>
-        </div>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <input type="submit" value="Save"/> <a href="{% url 'invoices:customer-list' %}">back to the list</a>
-</form>
-{% endcomment %}
-
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="{% static 'formset/jquery.formset.js' %}"></script>
-<script type="text/javascript">
-    $('.formset_row').formset({
-        addText: 'add invoice details',
-        deleteText: 'remove',
-        prefix: 'familymember_set'
-    });
-</script>
+</div>
 {% endblock %}
